--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500&family=Staatliches&display=swap"
       rel="stylesheet"
     />
-    
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -28,11 +28,26 @@
         dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
         aliquet,
       </p>
-      <div class="image-wrapper">
-        <img src="images/sorvete1.png" alt="" />
-        <img src="images/sorvete2.png" alt="" />
-        <img src="images/sorvete3.png" alt="" />
-        <img src="images/sorvete4.png" alt="" />
+      <div class="image-container">
+        <div class="image-wrapper">
+          <img src="images/sorvete1.png" alt="Paletas" />
+          <div class="image-caption">Paletas</div>
+        </div>
+
+        <div class="image-wrapper">
+          <img src="images/sorvete2.png" alt="Shakes" />
+          <div class="image-caption">Shakes</div>
+        </div>
+
+        <div class="image-wrapper">
+          <img src="images/sorvete3.png" alt="Massas" />
+          <div class="image-caption">Massas</div>
+        </div>
+
+        <div class="image-wrapper">
+          <img src="images/sorvete4.png" alt="Picolés" />
+          <div class="image-caption">Picolés</div>
+        </div>
       </div>
     </main>
   </body>
