Add desktop version

--- a/index.html
+++ b/index.html
@@ -10,45 +10,67 @@
     <title>Space Cream</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500&family=Staatliches&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Palanquin:wght@400;500&family=Roboto&family=Staatliches&display=swap"
       rel="stylesheet"
     />
 
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <img src="images/logo 1.svg" class="logo" alt="" />
-      <h1>Space Cream</h1>
-    </header>
-    <main>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus
-        leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat
-        dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
-        aliquet,
-      </p>
-      <div class="image-container">
-        <div class="image-wrapper">
-          <img src="images/sorvete1.png" alt="Paletas" />
-          <div class="image-caption">Paletas</div>
-        </div>
+    <div class="page">
+      <header>
+        <img src="images/logo 1.svg" class="logo" alt="" />
+        <div class="heading"><h1>Space Cream</h1></div>
+        <p class="header-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
+          rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
+          erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
+          quam aliquet, pharetra est in, sagittis lorem.elit. Donec a rhoncus
+          leo. Donec at scelerisque magna. Nullam vitae neque sit amet erat
+          dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
+          aliquet, pharetra est in, sagittis lorem.
+        </p>
+      </header>
+      <main>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
+          rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
+          erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at
+          quam aliquet,
+        </p>
+        <div class="image-container">
+          <div class="image-wrapper">
+            <img src="images/sorvete1.png" alt="Paletas" />
+            <div class="image-caption">Paletas</div>
+          </div>
 
-        <div class="image-wrapper">
-          <img src="images/sorvete2.png" alt="Shakes" />
-          <div class="image-caption">Shakes</div>
-        </div>
+          <div class="image-wrapper">
+            <img src="images/sorvete2.png" alt="Shakes" />
+            <div class="image-caption">Shakes</div>
+          </div>
 
-        <div class="image-wrapper">
-          <img src="images/sorvete3.png" alt="Massas" />
-          <div class="image-caption">Massas</div>
-        </div>
+          <div class="image-wrapper desktop-image">
+            <img src="images/sorvete1.png" alt="Paletas" />
+            <div class="image-caption">Paletas</div>
+          </div>
 
-        <div class="image-wrapper">
-          <img src="images/sorvete4.png" alt="Picolés" />
-          <div class="image-caption">Picolés</div>
+          <div class="image-wrapper desktop-image">
+            <img src="images/sorvete4.png" alt="Picolés" />
+            <div class="image-caption">Picolés</div>
+          </div>
+
+          <div class="image-wrapper">
+            <img src="images/sorvete3.png" alt="Massas" />
+            <div class="image-caption">Massas</div>
+          </div>
+
+          <div class="image-wrapper">
+            <img src="images/sorvete4.png" alt="Picolés" />
+            <div class="image-caption">Picolés</div>
+          </div>
         </div>
-      </div>
-    </main>
+        <footer>fale concosco no instagram <span class="instagram-id">@space_cream</bold></footer>
+      </main>
+    </div>
   </body>
 </html>
