--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   <body>
     <div class="page">
       <header>
-        <img src="images/logo 1.svg" class="logo" alt="" />
-        <div class="heading"><h1>Space Cream</h1></div>
+        <img src="images/logo 1.svg" class="logo" alt="logo" />
+        <div class="heading">
+          <img src="images/logo 1.svg" class="logo tablet-logo" alt="logo" />
+          <h1>Space Cream</h1>
+        </div>
         <p class="header-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a
           rhoncus leo. Donec at scelerisque magna. Nullam vitae neque sit amet
